--- a/templates/vsftpd.conf.j2
+++ b/templates/vsftpd.conf.j2
@@ -140,6 +140,44 @@ listen_address6={{ vsftpd_listen_address6 }}
 listen_address={{ vsftpd_listen_address }}
 {% endif %}
 
-pam_service_name=vsftpd
+pam_service_name={{ 'vsftpd.virtual' if vsftpd_virtual_users else 'vsftpd' }}
 userlist_enable=YES
 tcp_wrappers=YES
+
+{% if vsftpd_pasv_enable %}
+pasv_enable=YES
+pasv_min_port={{ vsftpd_pasv_min_port }}
+pasv_max_port={{ vsftpd_pasv_max_port }}
+{% if vsftpd_pasv_address %}
+pasv_address={{ vsftpd_pasv_address }}
+{% endif %}
+{% endif %}
+
+{% if vsftpd_ssl_enable and vsftpd_sa_cert_file %}
+ssl_enable=YES
+ 
+# Allow anonymous users to use secured SSL connections
+allow_anon_ssl={{ 'YES' if vsftpd_allow_anon_ssl else 'NO' }}
+ 
+# All non-anonymous logins are forced to use a secure SSL connection in order to
+# send and receive data on data connections.
+force_local_data_ssl={{ 'YES' if vsftpd_force_local_data_ssl else 'NO' }}
+ 
+# All non-anonymous logins are forced to use a secure SSL connection in order to send the password.
+force_local_logins_ssl={{ 'YES' if vsftpd_force_local_logins_ssl else 'NO' }}
+
+ssl_tlsv1={{ 'YES' if vsftpd_ssl_tlsv1 else 'NO' }}
+ssl_sslv2={{ 'YES' if vsftpd_ssl_sslv2 else 'NO' }}
+ssl_sslv3={{ 'YES' if vsftpd_ssl_sslv3 else 'NO' }}
+ 
+# Specifies the location of the RSA certificate to use for SSL encrypted connections
+rsa_cert_file=/etc/vsftpd/vsftpd.pem
+rsa_private_key_file=/etc/vsftpd/vsftpd.pem
+
+ssl_request_cert={{ 'YES' if vsftpd_ssl_request_cert else 'NO' }}
+validate_cert={{ 'YES' if vsftpd_validate_cert else 'NO' }}
+require_ssl_reuse={{ 'YES' if vsftpd_require_ssl_reuse else 'NO' }}
+
+ssl_ciphers={{ vsftpd_ssl_ciphers }}
+
+{% endif %}
