some tweaks to ftp root and add user token

--- a/templates/vsftpd.conf.j2
+++ b/templates/vsftpd.conf.j2
@@ -144,8 +144,13 @@ pam_service_name={{ 'vsftpd.virtual' if vsftpd_virtual_users else 'vsftpd' }}
 userlist_enable=YES
 tcp_wrappers=YES
 
-{% if vsftpd_virtual_users and vsftpd_virtual_root and vsftpd_local_root %}
-local_root={{ vsftpd_local_root }}
+{% if vsftpd_virtual_users %}
+{% if vsftpd_user_sub_token %}
+user_sub_token={{ vsftpd_user_sub_token }}
+local_root={{ vsftpd_virtual_root }}/{{ vsftpd_user_sub_token }}
+{% else %}
+local_root={{ vsftpd_virtual_root }}
+{% endif %}
 {% endif %}
 
 {% if vsftpd_pasv_enable %}
