--- a/templates/vsftpd.conf.j2
+++ b/templates/vsftpd.conf.j2
@@ -109,7 +109,7 @@ xferlog_std_format=YES
 # (Warning! chroot'ing can be very dangerous. If using chroot, make sure that
 # the user does not have write access to the top level directory within the
 # chroot)
-#chroot_local_user=YES
+chroot_local_user={{ 'YES' if vsftpd_chroot_local_user else 'NO' }}
 #chroot_list_enable=YES
 # (default follows)
 #chroot_list_file=/etc/vsftpd/chroot_list
